# stattic

./: .gitignore  BUG_FIXES_AND_IMPROVEMENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  WPIMPORT.md  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  security_demo.py  setup.py  stattic.py  tailwind.config.js  validate_fixes.py  wpImport.py
assets/css/: stattic.css  tailwind.min.css
assets/js/: alpine.min.js
content/: about.md  authors.yml  categories.yml  getting-started-with-tailwind-css-and-alpinejs.md  tags.yml
content/pages/: about.md  contact.md
content/posts/: build-with-stattic-and-deploy-on-github-pages.md  command-line-arguments-for-stattic.md  customizing-stattic.md  decentralizing-publishing-with-stattic.md  front-matter-fields-for-stattic.md  say-hello-to-stattic.md
my-site/: index.html
my-site/categories/tailwind-css/: index.html
my-site/categories/web-development/: index.html
my-site/contact/: index.html
my-site/en/about/: index.html
my-site/en/tailwind-alpine-tutorial/: index.html
my-site/tags/alpinejs/: index.html
my-site/tags/css/: index.html
my-site/tags/javascript/: index.html
my-site/tags/tailwind/: index.html
static/js/: app.js
stattic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stattic_pkg/: __init__.py  cli.py  core.py  settings.py  url_validator.py
stattic_pkg/templates/: 404.html  base.html  category.html  index.html  page.html  post.html  tag.html
templates/: 404.html  base.html  category.html  index.html  page-about.html  page.html  post.html  tag.html
tests/: __init__.py  conftest.py  test_file_processor.py  test_image_processing.py  test_security.py  test_stattic.py
